package testpackage;
syntax = "proto3";

message TestMessage {
    required int32 count = 1;
    required string data = 2;
    required bool isFinal = 3;
};